<resources>
    <string name="app_name">Movie App</string>
    <string name="the_umbrella_academy">The Umbrella Academy</string>
    <string name="action_adventure_sci_fi_fantasy"><![CDATA[Action & Adventure, Sci-Fi & Fantasy]]></string>
    <string name="_15_02_2021">15/02/2021</string>
    <string name="_8_8">8.8</string>
    <string name="the_umbrella_academy_synopsis">A dysfunctional family of superheroes comes together to solve the mystery of their father\'s death, the threat of the apocalypse and more.</string>
    <string name="profile">profile</string>
    <string name="image_view">image view</string>
    <string name="_l">|</string>
    <string name="synopsis">Synopsis</string>
    <string name="explanation_start">Find your favorite movies or series ond you can find it anywhere and any time.</string>
    <string name="get_started">Get started</string>
    <string name="welcome_back">Welcome back !!</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="create_new_account">Create new account</string>
    <string name="please_fill_in_the_form_to_creat_account">Please fill in the form to creat account</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="username">Username</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_your_password_write_your_email_and_reset_password">Forget your password ? Write your email and reset password</string>
    <string name="image_button">image_button</string>
    <string name="send">Send</string>
    <string name="Profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="shawnmendes_gmail_com">shawnmendes@gmail.com</string>
    <string name="shawnthegoat">ShawnThegoat</string>
    <string name="error_text">Please enter, its error</string>
    <string name="text_user">Users</string>
    <string name="error_create">Creating Account Failed</string>
    <string name="trailer">Trailer</string>
    <string name="a_dysfunctional_family_of_superheroes_comes_together_to_solve_the_mystery_of_their_father_s_death_the_threat_of_the_apocalypse_and_more">A dysfunctional family of superheroes comes together to solve the mystery of their father\'s death, the threat of the apocalypse and more.</string>
    <string name="create">Create</string>
</resources>