<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_main_color"
    tools:context=".activity.ProfileActivity">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_60dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_back_profile" />

    <TextView
        android:id="@+id/tv_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12dp"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_322dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/username"
        android:textColor="@color/main_gray"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_background_profile_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_background_profile_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

    <TextView
        android:id="@+id/tv_background_profile_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:autofillHints="Email"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="@dimen/_15dp"
        android:paddingTop="@dimen/_15dp"
        android:text="@string/shawnthegoat"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_username" />


    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/password"
        android:textColor="@color/main_gray"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_background_profile_username" />

    <TextView
        android:id="@+id/tv_background_profile_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:autofillHints="Email"
        android:background="@drawable/background_editext"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:padding="@dimen/_15dp"
        android:paddingStart="@dimen/_15dp"
        android:paddingTop="@dimen/_15dp"
        android:text="@string/shawnmendes_gmail_com"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_email" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginBottom="@dimen/_140dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="@dimen/_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_background_profile_password"
        app:layout_constraintStart_toStartOf="@+id/tv_background_profile_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_background_profile_password"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ib_back_profile"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/background_button_purple"
        android:contentDescription="@string/image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

</androidx.constraintlayout.widget.ConstraintLayout>