<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_16dp"
    android:background="@color/black_main_color">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_movie_poster"
        android:layout_width="@dimen/_106dp"
        android:layout_height="@dimen/_106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_view"
            android:src="@drawable/movie_poster" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_item_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/the_umbrella_academy"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_movie_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/action_adventure_sci_fi_fantasy"
        android:textColor="@color/main_gray"
        android:textSize="@dimen/_13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_movie_title" />

    <TextView
        android:id="@+id/tv_item_movie_release"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_23dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@drawable/background_gray"
        android:drawablePadding="@dimen/_20dp"
        android:gravity="center"
        android:text="@string/_15_02_2021"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/cv_item_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_movie_genre" />

    <TextView
        android:id="@+id/tv_item_movie_rate"
        android:layout_width="@dimen/_55dp"
        android:layout_height="@dimen/_23dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@drawable/background_gray"
        android:gravity="center"
        android:paddingStart="@dimen/_5dp"
        android:paddingEnd="@dimen/_5dp"
        android:text="@string/_8_8"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_item_movie_release"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_movie_genre" />

    <TextView
        android:id="@+id/tv_item_movie_synopsis"
        android:layout_width="@dimen/_265dp"
        android:layout_height="@dimen/_67dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="4"
        android:text="@string/the_umbrella_academy_synopsis"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_movie_release"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>